Fixed new comments layout issue

--- a/client/css/comments.css
+++ b/client/css/comments.css
@@ -9,7 +9,7 @@
 #comments article.comment>.date          { grid-area: 1 / 3 / span 1 / span 2; }
 #comments article.comment>p.comment-text,
 #comments article.comment>textarea.comment-text { grid-area: 2 / 2 / span 2 / span 2; }
-#comments article.comment>input#submit-comment { grid-area: 2 / 4; }
+#comments article.comment>input#comment-submit { grid-area: 2 / 4; }
 #comments article.comment>.actions { grid-area: 2 / 4; }
 
 #comments article.comment>.actions .icon {
